# fhirdemo

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  start-fhirdemo.sh
app/: Dockerfile  components.d.ts  package-lock.json  package.json
app/src/: App.vue  main.ts
app/src/clients/: server-client.ts
app/src/components/: HumanNameComponent.vue  TextArrayComponent.vue
app/src/models/: fhir.ts  search-operator.ts
app/src/router/: index.ts
app/src/views/: PatientListView.vue  PatientView.vue
db/: 01-schema.sql  02-organization-data.sql  02-patient-data.sql  03-extension.sql  03-patient-data.sql  Dockerfile  maybe-not-needed.sql  patient.control
db/patient-extension/: functions.sql  internal-functions.sql  patient--1.0.sql  public-functions.sql  view-refresh.sql  views.sql
environment/db/: Dockerfile  schema.sql
server/: Cargo.toml  Dockerfile
server/src/: api.rs  auth.rs  cache.rs  db.rs  main.rs  middleware.rs  model.rs  patient.rs  setid.rs
src/: main.rs
