[package]
name = "FhirDemo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-opentelemetry = "0.31.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2.9", features = ["derive"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }
uuid = "1.18.1"
deadpool = "0.12.3"
deadpool-postgres = "0.14.1"
deadpool-redis = "0.22.0"
chrono = { version = "0.4.42", features = ["serde"] }
http = "1.3.1"
derive = "1.0.0"
quote = "1.0.40"
syn = "2.0.106"
futures = "0.3.31"

[dev-dependencies]
testcontainers = "0.25.0"
speculoos = "0.13.0"
