[package]
name = "FhirDemo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2.9", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
deadpool = "0.12.3"
deadpool-postgres = "0.14.1"
deadpool-redis = "0.22.0"
chrono = { version = "0.4.42", features = ["serde"] }
http = "1.3.1"
futures = "0.3.31"
rand = "0.9.2"
hyper = "1.7.0"
http-body-util = "0.1.3"
axum-core = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

[dev-dependencies]
testcontainers = "0.25.0"
speculoos = "0.13.0"
